--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,9 @@ body {
     font-family: var(--font-padrao);
     color: var(--cor-texto);
 }
+strong {
+    font-weight: bold;
+}
 /* Estilo do Cabeçalho */
 .cabecalho {
     max-width: 1500px;
@@ -59,6 +62,9 @@ body {
 }
 .apresentacao__links{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
     justify-content: space-between;
 }
 .apresentacao__links__link {
@@ -72,7 +78,7 @@ body {
     text-align: center;
     font-size: 1.3rem;
     font-weight: bold;
-    width: 45%;
+    width: 50%;
     padding: 12px 0;
     border: 2px solid var(--cor-destaque);
     border-radius: 10px;
